--- a/tests.ipynb
+++ b/tests.ipynb
@@ -14,8 +14,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1596652864079",
-   "display_name": "Python 3.6.9 64-bit"
+   "name": "python38364bitdd669fdbc79d4481b7189c2d79c64192",
+   "display_name": "Python 3.8.3 64-bit"
   }
  },
  "nbformat": 4,
@@ -23,53 +23,198 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unembed(n: int, min_v: float, max_v: float, dim: int) -> float:\n",
-    "    step_size = float((max_v - min_v) / (dim-1))\n",
-    "    v = min_v + n * step_size\n",
-    "    return v"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "-4.0\n-2.857142857142857\n-1.7142857142857144\n-0.5714285714285716\n0.5714285714285712\n1.7142857142857135\n2.8571428571428568\n4.0\n"
-    }
-   ],
-   "source": [
-    "for i in range(0,8):\n",
-    "    print(unembed(i,-4,4,8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def embed(v, min_v, max_v, dim):\n",
-    "    \"\"\"Возвращает бинарный вектор, длины dim\"\"\"\n",
-    "    step_size = dim / (max_v - min_v)\n",
-    "    n = int(max(0, min(dim, (v - min_v) * step_size)))\n",
-    "    # result = np.zeros(dim, dtype=\"float32\")\n",
-    "    result = np.full(dim, 0, dtype=\"float32\")\n",
-    "    result[n] = 0.9\n",
-    "    return result"
+    "def load_dataset2(self, csv_file, count=0, skip=0):\n",
+    "        \"\"\"Подготовка обучающей выборки (x,y). Тип x и y - numpy.ndarray.\n",
+    "        Аргументы:\n",
+    "        csv_file - файл с ценами формата csv с колонками: 'date','time','open','high','low','close','tickvol','vol','spread'\n",
+    "        count - количество используемых примеров датасета\n",
+    "        skip - сдвиг относительно конца файла\n",
+    "        Возврат:\n",
+    "        x, y - размеченные данные типа numpy.array, сохранные на диск файл dataset_file\"\"\"\n",
+    "        # stride не менять, должно быть =1\n",
+    "        stride = 1  # шаг \"нарезки\" входных данных\n",
+    "        in_shape = self.datainfo.input_shape\n",
+    "        out_shape = self.datainfo.output_shape\n",
+    "        forward = self.datainfo.future\n",
+    "        in_size = self.datainfo._in_size()\n",
+    "        out_size = self.datainfo._out_size()  # out_shape[0]\n",
+    "        if not path.exists(csv_file):\n",
+    "            print('Отсутствует файл \"' + csv_file + '\"\\nЗагрузка данных неуспешна')\n",
+    "            return None, None\n",
+    "        print(\"Чтение файла\", csv_file, \"и создание обучающей выборки\")\n",
+    "        data = pd.read_csv(\n",
+    "            csv_file,\n",
+    "            sep=\"\\t\",\n",
+    "            header=0,\n",
+    "            dtype={\n",
+    "                \"open\": np.float32,\n",
+    "                \"close\": np.float32,\n",
+    "                \"tickvol\": np.float32,\n",
+    "                \"vol\": np.float32,\n",
+    "            },\n",
+    "            names=[\n",
+    "                \"date\",\n",
+    "                \"time\",\n",
+    "                \"open\",\n",
+    "                \"high\",\n",
+    "                \"low\",\n",
+    "                \"close\",\n",
+    "                \"tickvol\",\n",
+    "                \"vol\",\n",
+    "                \"spread\",\n",
+    "            ],\n",
+    "        )\n",
+    "        if skip == 0 and count == 0:\n",
+    "            open_rates = data[\"open\"]\n",
+    "            vol_rates = data[\"tickvol\"]\n",
+    "        elif skip == 0:\n",
+    "            open_rates = data[\"open\"][-count:]\n",
+    "            vol_rates = data[\"tickvol\"][-count:]\n",
+    "        elif count == 0:\n",
+    "            open_rates = data[\"open\"][:-skip]\n",
+    "            vol_rates = data[\"tickvol\"][:-skip]\n",
+    "        else:\n",
+    "            open_rates = data[\"open\"][-count - skip : -skip]\n",
+    "            vol_rates = data[\"tickvol\"][-count - skip : -skip]\n",
+    "        # объемы\n",
+    "        volumes = np.nan_to_num(np.array(vol_rates))\n",
+    "        volumes_strided = roll(opens[:-forward], in_size, stride)\n",
+    "        # цены\n",
+    "        opens = np.nan_to_num(np.diff(np.array(open_rates), n=1), posinf=8, neginf=-8)\n",
+    "        opens_strided = roll(opens[:-forward], in_size, stride)\n",
+    "        forward_values = roll(opens[in_size:], forward, stride).sum(axis=1)\n",
+    "        opens_std = opens.std()\n",
+    "        # open_mean = np.mean(opens)\n",
+    "        forward_values_std = forward_values.std()\n",
+    "        self.datainfo.x_std = float(opens_std)\n",
+    "        self.datainfo.y_std = float(forward_values_std)\n",
+    "        self.datainfo.save(self.name + \".cfg\")\n",
+    "\n",
+    "        x = np.reshape(opens_strided / opens_std, (opens_strided.shape[0],) + in_shape)\n",
+    "        v = np.reshape(volumes_strided / volumes_std, (opens_strided.shape[0], in_size))\n",
+    "        y = np.zeros((forward_values.shape[0], out_shape[0]))\n",
+    "        for i in range(y.shape[0]):\n",
+    "            y[i] = embed(\n",
+    "                forward_values[i] / forward_values_std,\n",
+    "                self.datainfo._y_min(),\n",
+    "                self.datainfo._y_max(),\n",
+    "                out_size,\n",
+    "            )\n",
+    "        n = np.arange(len(x))\n",
+    "        rnd = np.random.random(len(x))\n",
+    "        idx = n[\n",
+    "            (forward_values >= self.datainfo.y_std)\n",
+    "            | (forward_values <= -self.datainfo.y_std)\n",
+    "            \n",
+    "        ]\n",
+    "        x = x[idx]\n",
+    "        y = y[idx]\n",
+    "        v = v[idx]\n",
+    "        return x.astype(\"float32\"), y.astype(\"float32\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def load_dataset(self, tsv_file, count=0, skip=0):\n",
+    "        \"\"\"Подготовка обучающей выборки (x,y). Тип x и y - numpy.ndarray.\n",
+    "        Аргументы:\n",
+    "        csv_file - файл с ценами формата csv с колонками: 'date','time','open','high','low','close','tickvol','vol','spread'\n",
+    "        count - количество используемых примеров датасета\n",
+    "        skip - сдвиг относительно конца файла\n",
+    "        Возврат:\n",
+    "        x, y - размеченные данные типа numpy.array, сохранные на диск файл dataset_file\"\"\"\n",
+    "        # stride не менять, должно быть =1\n",
+    "        stride = 1  # шаг \"нарезки\" входных данных\n",
+    "        in_shape = self.datainfo.input_shape\n",
+    "        out_shape = self.datainfo.output_shape\n",
+    "        future = self.datainfo.future\n",
+    "        in_size = self.datainfo._in_size()\n",
+    "        out_size = self.datainfo._out_size()  # out_shape[0]\n",
+    "        if not path.exists(tsv_file):\n",
+    "            print('Отсутствует файл \"' + tsv_file + '\"\\nЗагрузка данных неуспешна')\n",
+    "            return None, None\n",
+    "        print(\"Чтение файла\", tsv_file, \"и создание обучающей выборки\")\n",
+    "        data = pd.read_csv(\n",
+    "            tsv_file,\n",
+    "            sep=\"\\t\",\n",
+    "            header=0,\n",
+    "            dtype={\n",
+    "                \"open\": np.float32,\n",
+    "                \"close\": np.float32,\n",
+    "                \"tickvol\": np.float32,\n",
+    "                \"vol\": np.float32,\n",
+    "            },\n",
+    "            names=[\n",
+    "                \"date\",\n",
+    "                \"time\",\n",
+    "                \"open\",\n",
+    "                \"high\",\n",
+    "                \"low\",\n",
+    "                \"close\",\n",
+    "                \"tickvol\",\n",
+    "                \"vol\",\n",
+    "                \"spread\",\n",
+    "            ],\n",
+    "        )\n",
+    "        if skip == 0 and count == 0:\n",
+    "            open_rates = data[\"open\"]\n",
+    "        elif skip == 0:\n",
+    "            open_rates = data[\"open\"][-count:]\n",
+    "        elif count == 0:\n",
+    "            open_rates = data[\"open\"][:-skip]\n",
+    "        else:\n",
+    "            open_rates = data[\"open\"][-count - skip : -skip]\n",
+    "        d = np.diff(np.array(open_rates), n=1)\n",
+    "        x_std = d.std()\n",
+    "        self.datainfo.x_std = float(x_std)\n",
+    "        d = np.nan_to_num(\n",
+    "            d / x_std, posinf=self.datainfo._x_inf(), neginf=-self.datainfo._x_inf()\n",
+    "        )\n",
+    "        x_data = roll(d[:-future], in_size, stride)\n",
+    "        x_forward = roll(d[in_size:], future, stride)\n",
+    "        y_data = np.sum(x_forward * self.datainfo.x_std, axis=1)\n",
+    "        self.datainfo.y_std = float(y_data.std())\n",
+    "        x = np.reshape(x_data, (x_data.shape[0],) + in_shape)\n",
+    "        y = np.zeros((y_data.shape[0], out_shape[0]))\n",
+    "\n",
+    "        for i in range(y.shape[0]):\n",
+    "            y[i] = embed(\n",
+    "                y_data[i], self.datainfo._y_min(), self.datainfo._y_max(), out_size,\n",
+    "            )\n",
+    "        n = np.arange(len(x))\n",
+    "        rnd = np.random.random(len(x))\n",
+    "        idx = n[\n",
+    "            (y_data >= self.datainfo.y_std)\n",
+    "            | (y_data <= -self.datainfo.y_std)            \n",
+    "        ]\n",
+    "        x = x[idx]\n",
+    "        y = y[idx]\n",
+    "        print(f\"Загружено {len(x)} примеров\")\n",
+    "        self.datainfo.save(self.name + \".cfg\")\n",
+    "        return x.astype(\"float32\"), y.astype(\"float32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -77,35 +222,31 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[0.9 0.  0.  0.  0.  0.  0.  0. ]\n[0.  0.9 0.  0.  0.  0.  0.  0. ]\n[0.  0.  0.9 0.  0.  0.  0.  0. ]\n[0.  0.  0.  0.9 0.  0.  0.  0. ]\n[0.  0.  0.  0.  0.9 0.  0.  0. ]\n[0.  0.  0.  0.  0.  0.9 0.  0. ]\n[0.  0.  0.  0.  0.  0.  0.9 0. ]\n[0.  0.  0.  0.  0.  0.  0.  0.9]\n"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "for i in range(-4,4):\n",
-    "    print(embed(i,-4,4,8))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
+     "text": "Отсутствует файл \"datas/EURUSD_M5_20000103_20200710.csv\"\nЗагрузка данных неуспешна\n"
+    },
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[0.14084507 0.28169014 0.42253521 0.14084507 0.01408451]\n[0.125  0.0625 0.4375 0.3125 0.0625]\n"
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "load_dataset2() got an unexpected keyword argument 'tsv_file'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-93c5e489ba46>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m     dense_size=64)\n\u001b[0;32m      9\u001b[0m \u001b[0mx0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my0\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_dataset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtsv_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"datas/EURUSD_M5_20000103_20200710.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1513200\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mskip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4608\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mx1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_dataset2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtsv_file\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"datas/EURUSD_M5_20000103_20200710.csv\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1513200\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mskip\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4608\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: load_dataset2() got an unexpected keyword argument 'tsv_file'"
+     ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "y=np.array([[0.1,0.2,0.3,.1,.01],[0.2,0.1,.7,.5,.1]])\n",
-    "l1 = np.sum(y,axis=1)\n",
-    "for i in range(len(y)):\n",
-    "    y[i] /= l1[i]\n",
-    "    print(y[i])\n"
+    "from predictor import Predictor\n",
+    "p = Predictor(\"models/37\",\n",
+    "    input_shape=(4, 4, 4, 1),\n",
+    "    output_shape=(8,),\n",
+    "    predict_size=16,\n",
+    "    filters=256,\n",
+    "    kernel_size=2,\n",
+    "    dense_size=64)\n",
+    "x0, y0 = load_dataset(tsv_file=\"datas/EURUSD_M5_20000103_20200710.csv\", count=1513200,skip=4608)\n",
+    "x1, y1 = load_dataset2(tsv_file=\"datas/EURUSD_M5_20000103_20200710.csv\", count=1513200,skip=4608)"
    ]
   },
   {
