--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.6.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.3 64-bit",
-   "display_name": "Python 3.8.3 64-bit",
+   "name": "Python 3.6.9 64-bit",
+   "display_name": "Python 3.6.9 64-bit",
    "metadata": {
     "interpreter": {
-     "hash": "ae7f53e8dd80b02e0612f72962c8cfdaf11ca92c079bdaddd1482a56edc14533"
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
     }
    }
   }
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    \"datas/EURUSD_M5.csv\",\n",
+    "    \"datas/EURUSD_H1.csv\",\n",
     "    sep=\"\\t\",\n",
     "    nrows=2**16,\n",
     "    header=0,\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,88 +72,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0.] [0.0004]\n-24.250000000002775 48.00000000000527\n"
+      "[0.] [0.0014]\n-17.78571428571619 21.642857142859523\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 1.5 ],\n",
-       "       [-0.25],\n",
-       "       [ 0.25],\n",
-       "       [ 0.75],\n",
-       "       [ 1.25],\n",
-       "       [ 0.  ],\n",
-       "       [-0.25],\n",
-       "       [-2.  ],\n",
-       "       [ 2.75],\n",
-       "       [ 1.25],\n",
-       "       [ 8.75],\n",
-       "       [-0.25],\n",
-       "       [-0.75],\n",
-       "       [-0.5 ],\n",
-       "       [-0.5 ],\n",
-       "       [ 1.  ],\n",
-       "       [ 1.75],\n",
-       "       [-0.25],\n",
-       "       [ 0.5 ],\n",
-       "       [ 0.5 ],\n",
-       "       [ 1.25],\n",
-       "       [-1.  ],\n",
-       "       [ 1.  ],\n",
-       "       [-1.25],\n",
-       "       [-0.25],\n",
-       "       [ 0.25],\n",
-       "       [ 1.75],\n",
-       "       [-1.25],\n",
-       "       [ 1.25],\n",
-       "       [-0.5 ],\n",
-       "       [ 0.5 ],\n",
-       "       [ 0.  ],\n",
-       "       [ 1.75],\n",
-       "       [ 1.5 ],\n",
-       "       [ 3.75],\n",
-       "       [ 4.5 ],\n",
-       "       [-2.  ],\n",
-       "       [ 2.  ],\n",
-       "       [-0.75],\n",
-       "       [ 0.  ],\n",
-       "       [-1.25],\n",
-       "       [ 0.  ],\n",
-       "       [-0.5 ],\n",
-       "       [ 0.25],\n",
-       "       [-0.5 ],\n",
-       "       [-0.5 ],\n",
-       "       [-0.5 ],\n",
-       "       [-0.25],\n",
-       "       [ 0.25],\n",
-       "       [-1.5 ],\n",
-       "       [ 0.5 ],\n",
-       "       [ 0.  ],\n",
-       "       [-0.75],\n",
-       "       [ 0.25],\n",
-       "       [ 1.  ],\n",
-       "       [-1.  ],\n",
-       "       [ 0.  ],\n",
-       "       [ 0.  ],\n",
-       "       [ 1.  ],\n",
-       "       [-1.  ],\n",
-       "       [ 0.25],\n",
-       "       [ 0.75],\n",
-       "       [-1.5 ],\n",
-       "       [ 0.25]])"
+       "array([[ 4.        ],\n",
+       "       [ 0.78571429],\n",
+       "       [ 2.14285714],\n",
+       "       [ 0.21428571],\n",
+       "       [-0.14285714],\n",
+       "       [ 0.        ],\n",
+       "       [ 0.21428571],\n",
+       "       [-1.42857143],\n",
+       "       [-0.85714286],\n",
+       "       [-1.85714286],\n",
+       "       [ 0.        ],\n",
+       "       [ 0.14285714],\n",
+       "       [-2.42857143],\n",
+       "       [ 0.21428571],\n",
+       "       [-0.07142857],\n",
+       "       [-0.64285714],\n",
+       "       [ 5.5       ],\n",
+       "       [ 0.07142857],\n",
+       "       [ 3.71428571],\n",
+       "       [ 0.78571429],\n",
+       "       [ 3.92857143],\n",
+       "       [-1.14285714],\n",
+       "       [-0.92857143],\n",
+       "       [-0.07142857],\n",
+       "       [-0.42857143],\n",
+       "       [ 1.64285714],\n",
+       "       [-0.64285714],\n",
+       "       [-0.85714286],\n",
+       "       [ 0.78571429],\n",
+       "       [-0.28571429],\n",
+       "       [-0.07142857],\n",
+       "       [-0.78571429],\n",
+       "       [ 0.42857143],\n",
+       "       [ 0.5       ],\n",
+       "       [-1.28571429],\n",
+       "       [ 3.21428571],\n",
+       "       [ 3.71428571],\n",
+       "       [-0.5       ],\n",
+       "       [-0.35714286],\n",
+       "       [ 1.21428571],\n",
+       "       [-2.14285714],\n",
+       "       [ 0.71428571],\n",
+       "       [-0.28571429],\n",
+       "       [-1.92857143],\n",
+       "       [ 1.28571429],\n",
+       "       [ 0.5       ],\n",
+       "       [-0.64285714],\n",
+       "       [-0.21428571],\n",
+       "       [ 0.21428571],\n",
+       "       [-0.35714286],\n",
+       "       [-0.21428571],\n",
+       "       [ 0.14285714],\n",
+       "       [ 0.        ],\n",
+       "       [ 1.64285714],\n",
+       "       [ 0.14285714],\n",
+       "       [ 0.21428571],\n",
+       "       [ 3.42857143],\n",
+       "       [ 1.5       ],\n",
+       "       [-1.71428571],\n",
+       "       [ 0.21428571],\n",
+       "       [-0.92857143],\n",
+       "       [ 0.5       ],\n",
+       "       [ 0.28571429],\n",
+       "       [ 0.35714286]])"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 8
     }
    ],
    "source": [
@@ -184,13 +184,6 @@
     "df = df.fillna(method='ffill')\n",
     "print(len(df.index))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
