custom loss - shifted_mse

--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -28,13 +28,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import sklearn.preprocessing as preprocessing\n"
+    "import sklearn.preprocessing as preprocessing\n",
+    "import tensorflow as tf\n"
    ]
   },
   {
@@ -72,101 +73,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0.] [0.0014]\n-17.78571428571619 21.642857142859523\n"
-     ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[ 4.        ],\n",
-       "       [ 0.78571429],\n",
-       "       [ 2.14285714],\n",
-       "       [ 0.21428571],\n",
-       "       [-0.14285714],\n",
-       "       [ 0.        ],\n",
-       "       [ 0.21428571],\n",
-       "       [-1.42857143],\n",
-       "       [-0.85714286],\n",
-       "       [-1.85714286],\n",
-       "       [ 0.        ],\n",
-       "       [ 0.14285714],\n",
-       "       [-2.42857143],\n",
-       "       [ 0.21428571],\n",
-       "       [-0.07142857],\n",
-       "       [-0.64285714],\n",
-       "       [ 5.5       ],\n",
-       "       [ 0.07142857],\n",
-       "       [ 3.71428571],\n",
-       "       [ 0.78571429],\n",
-       "       [ 3.92857143],\n",
-       "       [-1.14285714],\n",
-       "       [-0.92857143],\n",
-       "       [-0.07142857],\n",
-       "       [-0.42857143],\n",
-       "       [ 1.64285714],\n",
-       "       [-0.64285714],\n",
-       "       [-0.85714286],\n",
-       "       [ 0.78571429],\n",
-       "       [-0.28571429],\n",
-       "       [-0.07142857],\n",
-       "       [-0.78571429],\n",
-       "       [ 0.42857143],\n",
-       "       [ 0.5       ],\n",
-       "       [-1.28571429],\n",
-       "       [ 3.21428571],\n",
-       "       [ 3.71428571],\n",
-       "       [-0.5       ],\n",
-       "       [-0.35714286],\n",
-       "       [ 1.21428571],\n",
-       "       [-2.14285714],\n",
-       "       [ 0.71428571],\n",
-       "       [-0.28571429],\n",
-       "       [-1.92857143],\n",
-       "       [ 1.28571429],\n",
-       "       [ 0.5       ],\n",
-       "       [-0.64285714],\n",
-       "       [-0.21428571],\n",
-       "       [ 0.21428571],\n",
-       "       [-0.35714286],\n",
-       "       [-0.21428571],\n",
-       "       [ 0.14285714],\n",
-       "       [ 0.        ],\n",
-       "       [ 1.64285714],\n",
-       "       [ 0.14285714],\n",
-       "       [ 0.21428571],\n",
-       "       [ 3.42857143],\n",
-       "       [ 1.5       ],\n",
-       "       [-1.71428571],\n",
-       "       [ 0.21428571],\n",
-       "       [-0.92857143],\n",
-       "       [ 0.5       ],\n",
-       "       [ 0.28571429],\n",
-       "       [ 0.35714286]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "scaler = preprocessing.RobustScaler()\n",
-    "scaler.fit(x)\n",
-    "x_scaled = scaler.transform(x)\n",
-    "print(scaler.center_, scaler.scale_)\n",
-    "print(np.min(x_scaled), np.max(x_scaled))\n",
-    "x_scaled[:64]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 44,
    "metadata": {
     "tags": []
@@ -184,6 +90,70 @@
     "df = df.fillna(method='ffill')\n",
     "print(len(df.index))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shifted_mse(y_true, y_pred):\n",
+    "    y_true_sign = np.sign(y_true)\n",
+    "    y_pred_sign = np.sign(y_pred)\n",
+    "    d = tf.keras.losses.mean_squared_error(y_true + y_true_sign, y_pred + y_pred_sign)\n",
+    "    return d\n",
+    "\n",
+    "def mse(y_true, y_pred):\n",
+    "    d = tf.keras.losses.mean_squared_error(y_true, y_pred)\n",
+    "    return d \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.840000000000001\n0.04000000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=np.array([-0.1])\n",
+    "y=np.array([0.1])\n",
+    "print(shifted_mse(x,y).numpy())\n",
+    "print(mse(x,y).numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.00021926"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "2.1926*10**(-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
