--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def shifted_mse(y_true, y_pred):\n",
-    "    y_true_sign = np.sign(y_true)\n",
-    "    y_pred_sign = np.sign(y_pred)\n",
+    "    y_true_sign = tf.math.softsign(y_true)\n",
+    "    y_pred_sign = tf.math.softsign(y_pred)\n",
     "    d = tf.keras.losses.mean_squared_error(y_true + y_true_sign, y_pred + y_pred_sign)\n",
     "    return d\n",
     "\n",
@@ -110,19 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "4.840000000000001\n0.04000000000000001\n"
+      "0.24483218080620678\n0.09000000000000002\n"
      ]
     }
    ],
    "source": [
-    "x=np.array([-0.1])\n",
+    "x=np.array([-0.4])\n",
     "y=np.array([0.1])\n",
     "print(shifted_mse(x,y).numpy())\n",
     "print(mse(x,y).numpy())"
@@ -130,22 +130,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.00021926"
+       "<tf.Tensor: shape=(16, 16, 1), dtype=float32, numpy=\n",
+       "array([[[-1.6269401 ],\n",
+       "        [-1.4100147 ],\n",
+       "        [-1.1930895 ],\n",
+       "        [-0.9761641 ],\n",
+       "        [-0.7592387 ],\n",
+       "        [-0.54231334],\n",
+       "        [-0.32538807],\n",
+       "        [-0.10846269],\n",
+       "        [ 0.10846269],\n",
+       "        [ 0.32538807],\n",
+       "        [ 0.54231346],\n",
+       "        [ 0.75923884],\n",
+       "        [ 0.976164  ],\n",
+       "        [ 1.1930894 ],\n",
+       "        [ 1.4100147 ],\n",
+       "        [ 1.6269401 ]],\n",
+       "\n",
+       "       [[-1.6269403 ],\n",
+       "        [-1.4100149 ],\n",
+       "        [-1.1930895 ],\n",
+       "        [-0.97616434],\n",
+       "        [-0.7592387 ],\n",
+       "        [-0.5423136 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846281],\n",
+       "        [ 0.10846233],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423131 ],\n",
+       "        [ 0.7592387 ],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930895 ],\n",
+       "        [ 1.4100146 ],\n",
+       "        [ 1.6269403 ]],\n",
+       "\n",
+       "       [[-1.6269398 ],\n",
+       "        [-1.4100146 ],\n",
+       "        [-1.193089  ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.75923824],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846233],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423136 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761648 ],\n",
+       "        [ 1.1930895 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269407 ]],\n",
+       "\n",
+       "       [[-1.6269407 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930895 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423136 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846233],\n",
+       "        [ 0.10846233],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423136 ],\n",
+       "        [ 0.75923824],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930895 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269398 ]],\n",
+       "\n",
+       "       [[-1.6269398 ],\n",
+       "        [-1.4100142 ],\n",
+       "        [-1.1930895 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.75923824],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846233],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423145 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930904 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269398 ]],\n",
+       "\n",
+       "       [[-1.6269398 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930904 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269398 ]],\n",
+       "\n",
+       "       [[-1.6269417 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930904 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423145 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846138],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592373 ],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269398 ]],\n",
+       "\n",
+       "       [[-1.6269398 ],\n",
+       "        [-1.4100132 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.7592373 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846138],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423145 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930904 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269398 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616386],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538795],\n",
+       "        [-0.10846138],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538795],\n",
+       "        [ 0.5423145 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.97616386],\n",
+       "        [ 1.1930904 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269398 ]],\n",
+       "\n",
+       "       [[-1.6269379 ],\n",
+       "        [-1.4100132 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616196],\n",
+       "        [-0.7592354 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538605],\n",
+       "        [-0.10845947],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538986],\n",
+       "        [ 0.54231644],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930923 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269379 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616196],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538605],\n",
+       "        [-0.10845947],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538986],\n",
+       "        [ 0.54231644],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930923 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269379 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616196],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538605],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538986],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269417 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.97616196],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538605],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538986],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269417 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.9761658 ],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538986],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538605],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.9761658 ],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269417 ]],\n",
+       "\n",
+       "       [[-1.6269417 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930885 ],\n",
+       "        [-0.9761658 ],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538986],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538605],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.97616196],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269379 ]],\n",
+       "\n",
+       "       [[-1.6269417 ],\n",
+       "        [-1.4100151 ],\n",
+       "        [-1.1930923 ],\n",
+       "        [-0.9761658 ],\n",
+       "        [-0.7592392 ],\n",
+       "        [-0.5423126 ],\n",
+       "        [-0.32538986],\n",
+       "        [-0.10846329],\n",
+       "        [ 0.10846329],\n",
+       "        [ 0.32538605],\n",
+       "        [ 0.5423126 ],\n",
+       "        [ 0.7592392 ],\n",
+       "        [ 0.97616196],\n",
+       "        [ 1.1930885 ],\n",
+       "        [ 1.4100151 ],\n",
+       "        [ 1.6269379 ]]], dtype=float32)>"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 13
     }
    ],
    "source": [
-    "2.1926*10**(-4)"
+    "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
+    "x = np.arange(256, dtype='float32').reshape((16,16,1))\n",
+    "#print(x)\n",
+    "norm(x)\n"
    ]
   },
   {
