--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -50,10 +50,10 @@
     "    nrows=2**16,\n",
     "    header=0,\n",
     "    dtype={\n",
-    "        \"open\": np.float64,\n",
-    "        \"close\": np.float64,\n",
-    "        \"tickvol\": np.float64,\n",
-    "        \"vol\": np.float64,\n",
+    "        \"open\": np.float32,\n",
+    "        \"close\": np.float32,\n",
+    "        \"tickvol\": np.float32,\n",
+    "        \"vol\": np.float32,\n",
     "    },\n",
     "    parse_dates=[[0,1]],\n",
     "    index_col=[0],\n",
@@ -62,13 +62,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(4096, 16, 1)\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "-0.7367172"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
    "source": [
-    "prices = np.nan_to_num(np.array(df[\"open\"]), posinf=0, neginf=0)\n",
+    "prices = np.nan_to_num(np.array(df[\"open\"]), posinf=0, neginf=0).reshape((-1,16,1))\n",
     "prices_diff = np.diff(prices[: -64])\n",
-    "x = np.reshape(prices_diff[: -64], (-1, 1))"
+    "print(prices.shape)\n",
+    "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
+    "nx=norm(prices).numpy()\n",
+    "np.min(nx)\n",
+    "# print(norm(prices).numpy())"
    ]
   },
   {
@@ -93,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,324 +132,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.24483218080620678\n0.09000000000000002\n"
+      "2.3100990197039506\n1.0201\n"
      ]
     }
    ],
    "source": [
-    "x=np.array([-0.4])\n",
-    "y=np.array([0.1])\n",
+    "x=np.array([-1.0])\n",
+    "y=np.array([0.01])\n",
     "print(shifted_mse(x,y).numpy())\n",
     "print(mse(x,y).numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(16, 16, 1), dtype=float32, numpy=\n",
-       "array([[[-1.6269401 ],\n",
-       "        [-1.4100147 ],\n",
-       "        [-1.1930895 ],\n",
-       "        [-0.9761641 ],\n",
-       "        [-0.7592387 ],\n",
-       "        [-0.54231334],\n",
-       "        [-0.32538807],\n",
-       "        [-0.10846269],\n",
-       "        [ 0.10846269],\n",
-       "        [ 0.32538807],\n",
-       "        [ 0.54231346],\n",
-       "        [ 0.75923884],\n",
-       "        [ 0.976164  ],\n",
-       "        [ 1.1930894 ],\n",
-       "        [ 1.4100147 ],\n",
-       "        [ 1.6269401 ]],\n",
-       "\n",
-       "       [[-1.6269403 ],\n",
-       "        [-1.4100149 ],\n",
-       "        [-1.1930895 ],\n",
-       "        [-0.97616434],\n",
-       "        [-0.7592387 ],\n",
-       "        [-0.5423136 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846281],\n",
-       "        [ 0.10846233],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423131 ],\n",
-       "        [ 0.7592387 ],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930895 ],\n",
-       "        [ 1.4100146 ],\n",
-       "        [ 1.6269403 ]],\n",
-       "\n",
-       "       [[-1.6269398 ],\n",
-       "        [-1.4100146 ],\n",
-       "        [-1.193089  ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.75923824],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846233],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423136 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761648 ],\n",
-       "        [ 1.1930895 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269407 ]],\n",
-       "\n",
-       "       [[-1.6269407 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930895 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423136 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846233],\n",
-       "        [ 0.10846233],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423136 ],\n",
-       "        [ 0.75923824],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930895 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269398 ]],\n",
-       "\n",
-       "       [[-1.6269398 ],\n",
-       "        [-1.4100142 ],\n",
-       "        [-1.1930895 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.75923824],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846233],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423145 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930904 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269398 ]],\n",
-       "\n",
-       "       [[-1.6269398 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930904 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269398 ]],\n",
-       "\n",
-       "       [[-1.6269417 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930904 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423145 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846138],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592373 ],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269398 ]],\n",
-       "\n",
-       "       [[-1.6269398 ],\n",
-       "        [-1.4100132 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.7592373 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846138],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423145 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930904 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269398 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616386],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538795],\n",
-       "        [-0.10846138],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538795],\n",
-       "        [ 0.5423145 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.97616386],\n",
-       "        [ 1.1930904 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269398 ]],\n",
-       "\n",
-       "       [[-1.6269379 ],\n",
-       "        [-1.4100132 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616196],\n",
-       "        [-0.7592354 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538605],\n",
-       "        [-0.10845947],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538986],\n",
-       "        [ 0.54231644],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930923 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269379 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616196],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538605],\n",
-       "        [-0.10845947],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538986],\n",
-       "        [ 0.54231644],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930923 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269379 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616196],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538605],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538986],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269417 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.97616196],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538605],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538986],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269417 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.9761658 ],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538986],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538605],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.9761658 ],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269417 ]],\n",
-       "\n",
-       "       [[-1.6269417 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930885 ],\n",
-       "        [-0.9761658 ],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538986],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538605],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.97616196],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269379 ]],\n",
-       "\n",
-       "       [[-1.6269417 ],\n",
-       "        [-1.4100151 ],\n",
-       "        [-1.1930923 ],\n",
-       "        [-0.9761658 ],\n",
-       "        [-0.7592392 ],\n",
-       "        [-0.5423126 ],\n",
-       "        [-0.32538986],\n",
-       "        [-0.10846329],\n",
-       "        [ 0.10846329],\n",
-       "        [ 0.32538605],\n",
-       "        [ 0.5423126 ],\n",
-       "        [ 0.7592392 ],\n",
-       "        [ 0.97616196],\n",
-       "        [ 1.1930885 ],\n",
-       "        [ 1.4100151 ],\n",
-       "        [ 1.6269379 ]]], dtype=float32)>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 13
-    }
-   ],
+   "outputs": [],
    "source": [
     "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
     "x = np.arange(256, dtype='float32').reshape((16,16,1))\n",
-    "#print(x)\n",
-    "norm(x)\n"
+    "#print(x)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
