--- a/test3.ipynb
+++ b/test3.ipynb
@@ -169,23 +169,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "5.0"
+       "[array([63]),\n",
+       " array([62, 63]),\n",
+       " array([60, 61, 62, 63]),\n",
+       " array([56, 57, 58, 59, 60, 61, 62, 63]),\n",
+       " array([48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]),\n",
+       " array([32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48,\n",
+       "        49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63]),\n",
+       " array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+       "        51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63])]"
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 15
     }
    ],
    "source": [
-    "import math\n",
-    "math.log2(32)"
+    "import numpy as np\n",
+    "a = np.arange(0, 64)\n",
+    "[a[-2**i:] for i in range(6+1)]\n"
    ]
   },
   {
